removed Java9 alerts